// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`index renders 1`] = `
<DocumentFragment>
  <div
    class="portlet-ddm-form-report__header"
  >
    <div
      class="container-fluid container-fluid-max-xl"
    >
      <h2
        class="portlet-ddm-form-report__title text-truncate"
      />
      <span
        class="portlet-ddm-form-report__subtitle text-truncate"
      />
    </div>
  </div>
  <nav
    class="portlet-ddm-form-report__tabs navbar navbar-collapse-absolute navbar-expand-md navbar-underline navigation-bar navigation-bar-light"
  >
    <div
      class="container-fluid container-fluid-max-xl"
    >
      <button
        aria-expanded="false"
        class="navbar-toggler navbar-toggler-link collapsed btn btn-unstyled"
        type="button"
      >
        <span
          class="navbar-text-truncate"
        >
          summary
        </span>
        <svg
          class="lexicon-icon lexicon-icon-caret-bottom"
          role="presentation"
        >
          <use
            xlink:href="#caret-bottom"
          />
        </svg>
      </button>
      <div
        class="navbar-collapse collapse"
      >
        <div
          class="container-fluid container-fluid-max-xl"
        >
          <ul
            class="navbar-nav"
          >
            <li
              class="nav-item"
            >
              <a
                class="nav-link active link-unstyled"
              >
                summary
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </nav>
  <hr
    class="m-0"
  />
  <div
    class="container-fluid container-fluid-max-xl"
  >
    <div
      class="lfr-de__form-report"
    >
      <div
        class="report-cards-area"
      >
        <div
          class="card-item"
          id="_com_liferay_dynamic_data_mapping_form_report_web_portlet_DDMFormReportPortlet_card_0"
        >
          <div
            class="sheet"
          >
            <div
              class="col"
            >
              <div
                class="card image-card card-type-asset"
              >
                <div
                  class="card-header card-item-first aspect-ratio"
                >
                  <div
                    class="aspect-ratio-item aspect-ratio-item-center-left aspect-ratio-item-fluid card-symbol card-type-asset-icon"
                    data-tooltip-align="bottom"
                    data-tooltip-delay="300"
                    title="radio-field-type-label"
                  >
                    <svg
                      class="lexicon-icon lexicon-icon-radio-button"
                      role="presentation"
                    >
                      <use
                        xlink:href="#radio-button"
                      />
                    </svg>
                  </div>
                  <div
                    class="field-info"
                  >
                    <p
                      class="card-title"
                      title="Field 1"
                    >
                      <span
                        class="text-truncate-inline"
                      >
                        <span
                          class="text-truncate"
                        >
                          Field 1
                        </span>
                      </span>
                    </p>
                    <p
                      class="card-text"
                      title="there-are-no-entries"
                    >
                      there-are-no-entries
                    </p>
                  </div>
                </div>
                <div
                  class="card-body"
                >
                  <div
                    class="empty-message taglib-empty-result-message"
                  >
                    <div
                      class="taglib-empty-result-message-header"
                    />
                    <div
                      class="sheet-text text-center text-muted"
                    >
                      <h1
                        class="text-default"
                      >
                        there-are-no-entries
                      </h1>
                      <p
                        class="text-default"
                      >
                        entries-submitted-with-this-field-filled-will-show-up-here
                      </p>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="card-item"
          id="_com_liferay_dynamic_data_mapping_form_report_web_portlet_DDMFormReportPortlet_card_1"
        >
          <div
            class="sheet"
          >
            <div
              class="col"
            >
              <div
                class="card image-card card-type-asset"
              >
                <div
                  class="card-header card-item-first aspect-ratio"
                >
                  <div
                    class="aspect-ratio-item aspect-ratio-item-center-left aspect-ratio-item-fluid card-symbol card-type-asset-icon"
                    data-tooltip-align="bottom"
                    data-tooltip-delay="300"
                    title="radio-field-type-label"
                  >
                    <svg
                      class="lexicon-icon lexicon-icon-radio-button"
                      role="presentation"
                    >
                      <use
                        xlink:href="#radio-button"
                      />
                    </svg>
                  </div>
                  <div
                    class="field-info"
                  >
                    <p
                      class="card-title"
                      title="Field 2"
                    >
                      <span
                        class="text-truncate-inline"
                      >
                        <span
                          class="text-truncate"
                        >
                          Field 2
                        </span>
                      </span>
                    </p>
                    <p
                      class="card-text"
                      title="there-are-no-entries"
                    >
                      there-are-no-entries
                    </p>
                  </div>
                </div>
                <div
                  class="card-body"
                >
                  <div
                    class="empty-message taglib-empty-result-message"
                  >
                    <div
                      class="taglib-empty-result-message-header"
                    />
                    <div
                      class="sheet-text text-center text-muted"
                    >
                      <h1
                        class="text-default"
                      >
                        there-are-no-entries
                      </h1>
                      <p
                        class="text-default"
                      >
                        entries-submitted-with-this-field-filled-will-show-up-here
                      </p>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="card-item"
          id="_com_liferay_dynamic_data_mapping_form_report_web_portlet_DDMFormReportPortlet_card_2"
        >
          <div
            class="sheet"
          >
            <div
              class="col"
            >
              <div
                class="card image-card card-type-asset"
              >
                <div
                  class="card-header card-item-first aspect-ratio"
                >
                  <div
                    class="aspect-ratio-item aspect-ratio-item-center-left aspect-ratio-item-fluid card-symbol card-type-asset-icon"
                    data-tooltip-align="bottom"
                    data-tooltip-delay="300"
                    title="radio-field-type-label"
                  >
                    <svg
                      class="lexicon-icon lexicon-icon-radio-button"
                      role="presentation"
                    >
                      <use
                        xlink:href="#radio-button"
                      />
                    </svg>
                  </div>
                  <div
                    class="field-info"
                  >
                    <p
                      class="card-title"
                      title="Field 3"
                    >
                      <span
                        class="text-truncate-inline"
                      >
                        <span
                          class="text-truncate"
                        >
                          Field 3
                        </span>
                      </span>
                    </p>
                    <p
                      class="card-text"
                      title="there-are-no-entries"
                    >
                      there-are-no-entries
                    </p>
                  </div>
                </div>
                <div
                  class="card-body"
                >
                  <div
                    class="empty-message taglib-empty-result-message"
                  >
                    <div
                      class="taglib-empty-result-message-header"
                    />
                    <div
                      class="sheet-text text-center text-muted"
                    >
                      <h1
                        class="text-default"
                      >
                        there-are-no-entries
                      </h1>
                      <p
                        class="text-default"
                      >
                        entries-submitted-with-this-field-filled-will-show-up-here
                      </p>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="report-cards-shortcut"
      >
        <ul>
          <li>
            <a
              class=""
              data-senna-off="true"
            >
              <div
                class="indicator"
              />
              <div
                class="field-label"
              >
                Field 1
              </div>
            </a>
          </li>
          <li>
            <a
              class=""
              data-senna-off="true"
            >
              <div
                class="indicator"
              />
              <div
                class="field-label"
              >
                Field 2
              </div>
            </a>
          </li>
          <li>
            <a
              class=""
              data-senna-off="true"
            >
              <div
                class="indicator"
              />
              <div
                class="field-label"
              >
                Field 3
              </div>
            </a>
          </li>
        </ul>
      </div>
    </div>
    <div
      class="sidebar-container lfr-de__form-report-sidebar"
      id="_com_liferay_dynamic_data_mapping_form_report_web_portlet_DDMFormReportPortlet_sidebar-reports"
    >
      <div
        class="sidebar sidebar-light"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`index renders nothing when there is no data 1`] = `
<DocumentFragment>
  <div
    class="portlet-ddm-form-report__header"
  >
    <div
      class="container-fluid container-fluid-max-xl"
    >
      <h2
        class="portlet-ddm-form-report__title text-truncate"
      />
      <span
        class="portlet-ddm-form-report__subtitle text-truncate"
      />
    </div>
  </div>
  <nav
    class="portlet-ddm-form-report__tabs navbar navbar-collapse-absolute navbar-expand-md navbar-underline navigation-bar navigation-bar-light"
  >
    <div
      class="container-fluid container-fluid-max-xl"
    >
      <button
        aria-expanded="false"
        class="navbar-toggler navbar-toggler-link collapsed btn btn-unstyled"
        type="button"
      >
        <span
          class="navbar-text-truncate"
        >
          summary
        </span>
        <svg
          class="lexicon-icon lexicon-icon-caret-bottom"
          role="presentation"
        >
          <use
            xlink:href="#caret-bottom"
          />
        </svg>
      </button>
      <div
        class="navbar-collapse collapse"
      >
        <div
          class="container-fluid container-fluid-max-xl"
        >
          <ul
            class="navbar-nav"
          >
            <li
              class="nav-item"
            >
              <a
                class="nav-link active link-unstyled"
              >
                summary
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </nav>
  <hr
    class="m-0"
  />
  <div
    class="container-fluid container-fluid-max-xl"
  >
    <div
      class="empty-message taglib-empty-result-message"
    >
      <div
        class="taglib-empty-result-message-header"
      />
      <div
        class="sheet-text text-center text-muted"
      >
        <h1
          class="text-default"
        >
          there-are-no-entries
        </h1>
        <p
          class="text-default"
        >
          the-report-will-show-up-once-the-first-entry-is-submitted
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
